About page - Fix spacing on 200+ countries graphic

--- a/app/styles/about.sass
+++ b/app/styles/about.sass
@@ -133,12 +133,15 @@
     font-family: $headline-font
     font-variant: normal
     #story-graphic-1
-      margin-top: 100px
+      max-width: 580px
+      margin-top: 80px
+      margin-left: auto
+      margin-right: auto
       .media-heading
         color: $burgandy
     #story-graphic-2
       //TODO: Fix left-margin of this
-      margin-top: 100px
+      margin-top: 80px
       margin-left: auto
       margin-right: auto
       max-width: 390px
